[package]
name = "manifest-std"
version = "0.1.0"
edition = "2021"
build = "build.rs"
readme = "README.md"
license = "Apache-2.0"
description = "Standard library for the Manifest Network contracts"
repository = "https://github.com/manifest-network/manifest-std"
homepage = "https://manifest.network"
keywords = ["blockchain", "web3", "cosmwasm", "manifest"]

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"

[build-dependencies]
heck = "0.5.0"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
protobuf-src = { version = "2.1.1", optional = true }


[features]
default = []
build-protoc = ["protobuf-src"] # Build `protoc` from source instead of relying on a system installation